--- a/css/style.css
+++ b/css/style.css
@@ -50,15 +50,15 @@ img {
 
 .nav-menu {
     display: flex;
-    gap: 25px;
+    gap: 26px;
     list-style: none;
 }
 
 .nav-menu li a {
     text-decoration: none;
-    color: #333;
+    color: #121212;
     font-weight: 500;
-    transition: 0.3s;
+    transition: 0.4s;
 }
 
 .nav-menu li a:hover,
@@ -100,16 +100,16 @@ img {
 /* ---------- Page Header (Halaman Collection/About/Contact/Cart) ---------- */
 .page-header {
     padding: 130px 0 50px;
-    background: #c19885;
+    background: #9a7e71;
     text-align: center;
     margin-bottom: 40px;
 }
 
 .page-title {
     font-family: "Playfair Display", serif;
-    font-size: 42px;
-    font-weight: 700;
-    color: #222;
+    font-size: 43px;
+    font-weight: 701;
+    color: #151515;
 }
 
 .page-subtitle {
@@ -132,19 +132,19 @@ img {
 .hero-title {
     font-family: "Playfair Display", serif;
     font-size: 60px;
-    line-height: 1.3;
-    margin-bottom: 17px;
+    line-height: 1.4;
+    margin-bottom: 18px;
 }
 
 .hero-subtitle {
-    font-size: 22px;
+    font-size: 21px;
     font-weight: 500;
     margin-bottom: 10px;
 }
 
 .hero-description {
-    max-width: 451px;
-    margin-bottom: 26px;
+    max-width: 453px;
+    margin-bottom: 27px;
 }
 
 /* ---------- Buttons ---------- */
