--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 
 body {
     font-family: "Poppins", sans-serif;
-    line-height: 1.7;
+    line-height: 1.8;
     color: #333;
     background-color: #fffffff3;
 }
@@ -31,7 +31,7 @@ img {
     top: 0;
     background: #fff;
     padding: 20px 0;
-    box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+    box-shadow: 0 2px 10px rgba(6, 6, 6, 0.338);
     z-index: 1000;
 }
 
@@ -43,7 +43,7 @@ img {
 
 .logo h1 {
     font-family: "Playfair Display", serif;
-    font-size: 28px;
+    font-size: 29px;
     font-weight: 700;
     color: #222;
 }
