--- a/css/style.css
+++ b/css/style.css
@@ -131,7 +131,7 @@ img {
 /* ---------- Hero Section ---------- */
 
 .hero {
-    background: url("https://images.unsplash.com/photo-1503342217505-b0a15ec3261c?w=1200") center/cover no-repeat;
+    background: url("../images/bg2.jpg") center/cover no-repeat;
     height: 95vh;
     display: flex;
     align-items: center;
